refactor: null값을 반환하지 않고 Optional로 반환하도록 변경
- null값 검증에 대한 처리를 위임하기 위해 Optional로 변경하여 반환